--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <center><h1>My Top 3 Favorite Foods</h1></center>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <center><h2> Ice Cream</h2></center>
+<p style="font-family:cursive">Ice cream is so sweet</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvGrxm5Q5Jqh5GmcOxocAjLyjYtGHwtELcew&usqp=CAU" alt="">
 </head>
-<center><h2>Ice Cream</h2></center>
 </html>
