--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <center><h1>My Top 3 Favorite Foods</h1></center>
+<body>
+    
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <center><h2> Ice Cream</h2></center>
-<p style="font-family:cursive">Ice cream is so sweet</p>
+<center> <h1 class="Foods">My top 3 Favorite Foods</h1></center>
+
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<center>
+<div>
+<h2 class="Foods" id="Pizza">1. Pizza</h2>
+<p>Pizza is just AMAZING🍕🔥🍕</p>
+ <img src="https://th.bing.com/th/id/OIP.ifOD6yjD-r29uGM-qeaKiQHaDw?w=347&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
+
+</div></center>
+<center><div>
+<h2 class="Foods" id="Ice Cream">2. Ice Cream</h2>
+<p>Ice cream is so sweet</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvGrxm5Q5Jqh5GmcOxocAjLyjYtGHwtELcew&usqp=CAU" alt="">
+</div><center>
+<center><div>
+<h2 class="Foods" id="Sushi">3. Sushi </h2>
+<p>Sushi is so flavorful🍣</p>
+<img src="https://th.bing.com/th/id/OIP.UBnOcQh5PzY5CwM_Xq-xdgHaE6?w=247&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt=""><center>
+</body>
 </head>
 </html>
