--- a/index.html
+++ b/index.html
@@ -13,18 +13,28 @@
 <center>
 <div>
 <h2 class="Foods" id="Pizza">1. Pizza</h2>
-<p>Pizza is just AMAZING🍕🔥🍕</p>
+<p>Pizza is just AMAZING. The flavor. EVERYTHING!🍕🔥🍕
+ 
+    <a href="https://Dominos.com">Click here to buy Pizza!</a>
+</p>
  <img src="https://th.bing.com/th/id/OIP.ifOD6yjD-r29uGM-qeaKiQHaDw?w=347&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
 
 </div></center>
 <center><div>
 <h2 class="Foods" id="Ice Cream">2. Ice Cream</h2>
-<p>Ice cream is so sweet</p>
+<p>Ice cream is so sweet. I love ice cream because I love sweets😊
+    Buy here!
+    <a href="https://www.benjerry.com/">Click here to buy Ice Cream!</a>
+</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvGrxm5Q5Jqh5GmcOxocAjLyjYtGHwtELcew&usqp=CAU" alt="">
 </div><center>
 <center><div>
 <h2 class="Foods" id="Sushi">3. Sushi </h2>
-<p>Sushi is so flavorful🍣</p>
+<p>Sushi is so flavorful. There are so many types!🍣
+    <a href="https://www.ubereats.com/near-me/sushi
+    ">Click here to buy Sushi!
+</a>
+</p>
 <img src="https://th.bing.com/th/id/OIP.UBnOcQh5PzY5CwM_Xq-xdgHaE6?w=247&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt=""><center>
 </body>
 </head>
